force-app/main/default/objects/LocationPair__c/LocationPair__c.object-meta.xml
<CustomObject>
    <label>LocationPair</label>
    <nameField>
        <displayFormat>LP-{000000000}</displayFormat>
        <label>LocationPair Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LocationPairs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>