force-app/main/default/objects/LocationPair__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <label>Cluster</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>