force-app/main/default/objects/LocationPair__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <label>Distance</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>