force-app/main/default/objects/LocationPair__c/fields/Mean__c.field-meta.xml
<CustomField>
    <fullName>Mean__c</fullName>
    <label>Mean</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>