force-app/main/default/objects/LocationPair__c/fields/Std_Dev__c.field-meta.xml
<CustomField>
    <fullName>Std_Dev__c</fullName>
    <label>Std Dev</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>